# nostui

./: .justfile  Cargo.toml  LICENSE  config.json  justfile
book/: justfile
book/src/sdk/: getting-started.md
book/src/sdk/nips/: 07.md
book/src/sdk/signers/: index.md  nostr-connect.md
crates/commander/: Cargo.toml
crates/commander/src/: lib.rs  main.rs  online.rs  rest.rs
crates/nostr_watch/: Cargo.toml
crates/nostr_watch/src/: lib.rs  main.rs  nip0.rs  nip1.rs  nip2.rs  nip3.rs  nip4.rs  nip5.rs  nips.rs  offline.rs  online.rs  paid.rs
src/: app.rs  cli.rs  main.rs  utils.rs
src/components/: fps.rs  home.rs  status_bar.rs
src/widgets/: text_note.rs
