[package]
name = "nostr_watch"
version = "0.0.1"
edition = "2021"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0" }
clap = "2"
nostr = { version = "0.37.0", path = "../../crates/nostr" }
nostr-sdk = { version = "0.37.0", path = "../../crates/nostr-sdk" }
serde = "1.0.99"
reqwest = "0.9.20"
serde_json.workspace = true

